[WinCairo] Compile error when GStreamer is enabled. https://bugs.webkit.org/show_bug.cgi?id=138925

Patch by peavo@outlook.com <peavo@outlook.com> on 2014-11-20
Reviewed by Philippe Normand.

A guard is missing for an overridden method.

* platform/graphics/gstreamer/WebKitWebSourceGStreamer.cpp:

Canonical link: https://commits.webkit.org/156782@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@176395 268f45cc-cd09-0410-ab3c-d52691b4dbfc